# AutoMLDotaBot

./: .gitmodules  CMakeLists.txt  grpc_test.cpp  note.md
cmake/: grpc.cmake
include/dotaclient/: dotaservice.h  env.h  expert_item_build.h  util.h
include/nn/: ability_tree_layer.h  attack_layer.h  highlevel_decision.h  layer.h  move_layer.h  nn.h  solo_pred_reward.h  torch_layer.h  util.h
include/openai_five/: network.h
include/util/: perf_timer.h  util.h
src/bot/: solo_bot.cc
src/dotaclient/: env.cc  env.cpp  expert_item_build.cc
src/nn/: ability_tree_layer.cc  action_decision.cc  attack_layer.cc  highlevel_decision.cc  layer.cc  move_layer.cc  nn.cc  solo_pred_reward.cc  torch_layer.cc
src/openai_five/: network.cc
src/util/: default_ability_attr.cc  perf_timer.cc  util.cc
